# piedra-papel-tijeras

./: .gitignore  README.md  pyproject.toml
datos/: historial.json
src/: __init__.py  config.py  estadisticas.py  excepciones.py  juego.py  jugador_gui.py  main.py  main_gui.py  modelos.py  persistencia.py
test/: __init__.py  test_estadisticas.py  test_juego.py  test_jugador_gui.py  test_modelos.py  test_persistencia.py
