[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "piedra-papel-tijeras"
version = "1.0.0"
description = "Juego de Piedra, Papel o Tijeras con POO, persistencia JSON, logging y pruebas unitarias."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Edvard Pichardo", email = "no específicado"}
]
keywords = ["juego", "piedra-papel-tijeras", "portfolio", "POO", "pytest"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

# Dependencias de producción (solo biblioteca estándar en este proyecto)
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]